# vyra

./: .gitconfig  .replit  DEPLOYMENT.md  Dockerfile  WEBSOCKET_SOLUTION.md  design_guidelines.json  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  index.html  mongo-init.js  nginx.allinone.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md
.emergent/: emergent.yml
.github/: copilot-instructions.md
attached_assets/: Pasted-You-are-a-senior-full-stack-architect-game-engineer-UI-_1777289528798.txt
backend/: auth.py  board.py  db.py  economy.py  game_engine.py  matchmaking.py  models.py  requirements-dev.txt  requirements.txt  routes_auth.py  routes_game.py  routes_store.py  routes_wallet.py  server.py  ws_manager.py
backend/tests/: conftest.py  test_abilities_unit.py  test_rest.py  test_websocket.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  setupProxy.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: Board3DShowcase.jsx
frontend/src/lib/: api.js  modelLoader.js  moves.js  razorpay.js
frontend/src/pages/: GameRoom.jsx  Landing.jsx  Leaderboard.jsx  Lobby.jsx  Login.jsx  Profile.jsx  Register.jsx  Store.jsx  Wallet.jsx
memory/: PRD.md
scripts/: start.sh
src/: App.jsx  Board.jsx  GameLayout.jsx  GameLogic.js  LeftSidebar.jsx  Node.jsx  RightSidebar.jsx  Topbar.jsx  index.css
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_results.xml  test_rest.xml  test_websocket.xml
(+10 files in other folders)
